lab/istio/helm/istio-ingress/argo-cd-public-ingress-gateway-argocd.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-ingress-gateway-argocd
spec:
  selector:
    istio: ingress

  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.example.com"

    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ingress-argo-cd-tls
      hosts:
        - "*.example.com"
